# iauto

./: .editorconfig  .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_identity.py  0003_vehicles.py  0004_catalog.py  0005_encryption.py  0006_phase1_core.py  0007_coverage_and_quotes.py  0008_session6_reservations_sales_reviews_media.py  0009_session7_payments_qpay_mycar.py  0010_session8_chat.py  0011_session9_service_history_notifications.py  0012_session10_warehouse.py  0013_session11_story.py  0014_session12_ads.py  0015_session13_ai_mechanic.py  0016_session14_whisper_voice.py  0017_session15_warning_lights.py  0018_session16_multimodal.py  0019_session17_valuation.py  0020_session21_index_hardening.py  0021_session23_driver_stories.py  0022_session24_vehicle_dues.py
backend/app/: __init__.py  main.py
backend/app/admin/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/app/ads/: __init__.py  dependencies.py  events.py  handlers.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/ai_mechanic/: __init__.py  agent.py  dependencies.py  embeddings.py  models.py  multimodal.py  rate_limit.py  repository.py  router.py  schemas.py  service.py  spend.py  warning_lights.py  whisper.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  (+1 more)
backend/app/businesses/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/catalog/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/chat/: __init__.py  dependencies.py  events.py  handlers.py  models.py  pubsub.py  repository.py  router.py  schemas.py  service.py
backend/app/identity/: __init__.py  dependencies.py  events.py  models.py  otp_store.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/marketplace/: __init__.py  dependencies.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/media/: __init__.py  client.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/notifications/: __init__.py  dependencies.py  handlers.py  models.py  providers.py  repository.py  router.py  schemas.py  service.py
backend/app/payments/: __init__.py  dependencies.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/platform/: __init__.py  base.py  cache.py  config.py  crypto.py  db.py  errors.py  events.py  ids.py  logging.py  middleware.py  models_registry.py  observability.py  outbox.py  rate_limit.py
backend/app/story/: __init__.py  dependencies.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/valuation/: __init__.py  dependencies.py  models.py  models_runtime.py  repository.py  router.py  schemas.py  service.py
backend/app/vehicles/: __init__.py  alerts.py  dependencies.py  events.py  handlers.py  models.py  pdf.py  repository.py  router.py  schemas.py  service.py
backend/app/warehouse/: __init__.py  dependencies.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/workers/: __init__.py  cost_alert.py  outbox_consumer.py  reservations.py  valuation.py
backend/docs/references/: qpay_laravel_reference.md
backend/scripts/: gen_openapi.py  smoke_test.py
backend/tests/: conftest.py
backend/tests/admin/: test_dependencies.py  test_spend_report.py
backend/tests/ads/: test_ads.py
backend/tests/ai_mechanic/: fakes.py  test_agent.py  test_kb.py  test_multimodal.py  test_rate_limit.py  test_voice.py  test_warning_lights.py
backend/tests/businesses/: test_analytics.py  test_service.py
backend/tests/catalog/: test_http_flow.py  test_service.py
backend/tests/chat/: test_handler.py  test_service.py
backend/tests/identity/: test_http_flow.py  test_models_crypto.py  test_schemas.py  test_service.py
backend/tests/marketplace/: test_cancel_reservation_http.py  test_service.py  test_session6.py
backend/tests/media/: test_http_flow.py  test_service.py
backend/tests/notifications/: test_handlers.py
(+105 files in other folders)
