[project]
name = "iauto-backend"
version = "0.0.0"
description = "iAuto — FastAPI modular monolith backend"
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "iAuto" }]

dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",

  # Data layer
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",

  # Validation & config
  "pydantic>=2.9",
  "pydantic-settings>=2.6",

  # Auth
  "pyjwt[crypto]>=2.10",

  # Cache, queue, external I/O
  "redis>=5.2",
  "arq>=0.26",
  "httpx>=0.28",
  "tenacity>=9.0",

  # Logging
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "asgi-lifespan>=2.1",
  "freezegun>=1.5",
  "types-python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]
# Install the project itself in editable mode when running `uv sync`.
package = true

# ---------------------------------------------------------------------------
# ruff — formatter + linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
# Start wide, turn off the noisy rules. Prefer erring on the side of strictness.
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "PT",  # pytest style
  "RUF", # ruff-specific
  "ASYNC", # async/await gotchas
  "S",   # bandit (security)
  "T20", # no print/pprint in production code
]
ignore = [
  "E501",   # line length — formatter handles it
  "B008",   # FastAPI Depends() in defaults is idiomatic
  "S101",   # asserts are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PT011"]
"alembic/**" = ["N999", "S608"]
"app/**/router.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "alembic.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
# Third-party libs that ship partial or missing stubs — loosen the strictness
# rather than fight the ecosystem.
module = [
  "arq.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=app",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=0",  # ratcheted up in later sessions
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:passlib.*",
]
markers = [
  "integration: tests that hit the dev-compose Postgres/Redis",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
  "app/**/__init__.py",
  "app/workers/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
